# TecRoom

./: .gitignore  .readthedocs.yaml  .release-please-manifest.json  .releaserc  CHANGELOG.md  LICENSE  Makefile  README.md  make.bat  package-lock.json  package.json  pyproject.toml  release-please-config.json
.github/workflows/: blank.yml  release.yml
source/: conf.py  hello.rst  index.rst  requirements.txt
source/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
source/_build/html/.doctrees/: environment.pickle  index.doctree
source/_build/html/_sources/: index.rst.txt
source/doc/: database.rst  machine_intelligence.rst  other.rst  programming.rst  virtual-container.rst
source/doc/关于/: about_blog.md  about_me.md  about_me.rst  build_readthedocs.rst  index.rst
source/doc/分布式与微服务系列/: index.rst  中间件.rst
source/doc/团队与项目管理/: PM.rst  TecLeader.rst  team_project.rst
source/doc/开源工具/: ETL.rst
source/doc/接口开发/: 接口开发.rst  接口框架.rst
source/doc/数学物理计算机历史系列/: computer.rst  math.rst  physics.rst
source/doc/数据库系列/: mysql.rst
source/doc/数据结构与算法系列/: dataStruct_algorithm.rst
source/doc/机器智能系列/: dl.md  dl.rst  kg.md  kg.rst  ml.md  ml.rst  nlp.md  nlp.rst  计算语言学.rst
source/doc/机器智能系列/AGI/: LLM.rst
source/doc/编程语言及开发框架/: C++.rst  Drools.rst  index.rst
source/doc/编程语言系列/: Matlab.rst  Python.md
source/doc/虚拟化与容器技术/: docker.rst  k8s.rst
source/doc/设计模式/: design-pattern.md  design-pattern.rst
source/doc/道与术/: tao-art.rst
source/doc/项目开发杂谈/: 项目开发杂谈.rst
tec_summary/: dict_test.py  regular_expressions_usages.md
(+82 files in other folders)
