[project]
name = "tecroom"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ablog>=0.11.12",
    "doc8>=2.0.0",
    "esbonio>=0.16.5",
    "myst-parser>=4.0.1",
    "recommonmark>=0.7.1",
    "restructuredtext-lint>=1.4.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.1",
    "sphinx-material>=0.0.36",
    "sphinx-togglebutton>=0.3.2",
    "sphinxcontrib-youtube>=1.4.1",
]

[[tool.uv.index]]
url="https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
